--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+h2, h2, h3, h4 {
+    font-family: 'Josefin Sans';
+    font-weight: 600;
+}
+
+body {
+    font-family: 'Almarai';
+}
+
 .card .inner-card {
     @apply bg-gradient-to-br from-white via-red-300 to-red-400;
 }
