--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-h2, h2, h3, h4 {
+h1, h2, h3, h4 {
     font-family: 'Josefin Sans';
     font-weight: 600;
     line-height: 1;
@@ -28,3 +28,102 @@ header svg {
     margin: 10px;
 }
 
+main {
+    opacity: 0;
+    display: none;
+    animation: 1s loaderAnimMain 0s ease-in-out forwards;
+}
+
+.loading-inner-wrap {
+    animation: 3.2s loaderAnim ease-in-out forwards;
+    transform-origin: center;
+    transform: scale(0);
+}
+
+@keyframes loaderAnim {
+    0% {
+        transform: scale(0);
+    }
+    40% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1);
+    }
+    70% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+
+@keyframes loaderAnimMain {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.title-container {
+    font-size: 7rem;
+}
+
+.title-container span {
+    opacity: 0;
+    animation-duration: 1s;
+    animation-name: cardAnim;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+    transform: translateY(30px);
+}
+
+.title-container span:nth-of-type(1) {
+    animation-delay: 1s;
+}
+
+.title-container span:nth-of-type(2) {
+    animation-delay: 1.1s;
+}
+
+.title-container span:nth-of-type(3) {
+    animation-delay: 1.2s;
+}
+
+.title-container span:nth-of-type(4) {
+    animation-delay: 1.3s;
+}
+
+.card {
+    opacity: 0;
+    animation-duration: 1s;
+    animation-name: cardAnim;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+    transform: translateY(30px);
+}
+
+.first-card {
+    animation-delay: 0.3s;
+}
+
+.second-card {
+    animation-delay: 0.8s;
+}
+
+.third-card {
+    animation-delay: 1.2s;
+}
+
+@keyframes cardAnim {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
