--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,6 +22,11 @@ body {
     margin: 10px;
 }
 
+.loading-wrapper {
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
+}
+
 header svg {
     height: 36px;
     width: 36px;
